--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~38.0.8",
     "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "npm": "^6.14.8",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
@@ -24,7 +25,8 @@
     "react-navigation-drawer": "^2.5.0",
     "react-navigation-header-buttons": "^5.0.2",
     "react-navigation-stack": "^2.8.2",
-    "react-navigation-tabs": "^2.9.0"
+    "react-navigation-tabs": "^2.9.0",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
